fixing overlapping executed element info

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,7 @@ body {
     margin: 25px;
     background-image: url("/static/assets/images/bkgdfinal.jpg");
     background-repeat: no-repeat;
+    background-size: auto;
     background-attachment: fixed; 
     color: black;
     font-family: 'Josefin Slab', serif;
